View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027066 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-01-08 19:46 | 2016-04-20 15:51 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027066: BRepFeat_MakeCylindricalHole::Perform() hides overloaded virtual function | ||||
Description | CLang compiler reports two warnings in BRepFeat_MakeCylindricalHole (see 0025076): /home/abv/occt/src/BRepFeat/BRepFeat_MakeCylindricalHole.hxx:58:24: warning: 'BRepFeat_MakeCylindricalHole::Perform' hides overloaded virtual function [-Woverloaded-virtual] Standard_EXPORT void Perform (const Standard_Real Radius); ^ /home/abv/occt/src/BOPAlgo/BOPAlgo_BOP.hxx:62:32: note: hidden overloaded virtual function 'BOPAlgo_BOP::Perform' declared here: different number of parameters (0 vs 1) Standard_EXPORT virtual void Perform() Standard_OVERRIDE; ^ /home/abv/occt/src/BRepFeat/BRepFeat_MakeCylindricalHole.hxx:65:24: warning: 'BRepFeat_MakeCylindricalHole::Perform' hides overloaded virtual function [-Woverloaded-virtual] Standard_EXPORT void Perform (const Standard_Real Radius, const Standa... ^ /home/abv/occt/src/BOPAlgo/BOPAlgo_BOP.hxx:62:32: note: hidden overloaded virtual function 'BOPAlgo_BOP::Perform' declared here: different number of parameters (0 vs 4) Standard_EXPORT virtual void Perform() Standard_OVERRIDE; It is not clear whether hidden method should be redefined on this level. If it does not (which means inherited implementation is OK), we can just import it by "using" directive to silence the warning. | ||||
Steps To Reproduce | Perform() from BOPAlgo_BOP class is now visible on the level of BRepFeat_MakeCylindricalHole | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
child of | 0025076 | closed | Community | Hidden overloaded virtual functions |
|
Dear Ilya, please take care of this bug, as it concerns the same class as the bug you are processing #26724. |
|
Branch CR27066 has been created by isn. SHA-1: cd29932d6940da118b9fc59c832e46a2e97e559d Detailed log of new commits: Author: isn Date: Mon Jan 11 18:32:41 2016 +0300 0027066: BRepFeat_MakeCylindricalHole::Perform() hides overloaded virtual function |
|
Branch CR27066 has been updated forcibly by isn. SHA-1: a912e85cd45b5814fb7af96097c31e1a1e7516bc |
|
Why did you put 'using' in public section? I think if there is possibility we should hide this declaration in protected section in order to prevent unintended use of this method. |
|
Branch CR27066 has been updated by isn. SHA-1: 4e48109ccee4b4810c9339f1fb2de7a8d46fa573 Detailed log of new commits: Author: isn Date: Wed Jan 13 11:57:10 2016 +0300 move to protected section |
|
Reviewed. |
|
Dear BugMaster, Branch CR27066 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 4e48109ccee4b4810c9339f1fb2de7a8d46fa573 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 136 (136 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 89993586 / 89884726 [+0.12%] Total CPU difference: 19232.340000000073 / 19263.900000000092 [-0.16%] products component : Total MEMORY difference: 25285547 / 25273773 [+0.05%] Total CPU difference: 8447.780000000017 / 7373.110000000011 [+14.58%] Testing on Windows: occt component : Total MEMORY difference: 57211257 / 57466619 [-0.44%] Total CPU difference: 18227.82764429891 / 18535.477216399115 [-1.66%] products component : Total MEMORY difference: 16923491 / 17032519 [-0.64%] Total CPU difference: 5931.579222699998 / 5812.004456199969 [+2.06%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR27066 is TESTED. |
|
Branch CR27066 has been deleted by kgv. SHA-1: 4e48109ccee4b4810c9339f1fb2de7a8d46fa573 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-01-08 19:46 |
|
New Issue | |
2016-01-08 19:46 |
|
Assigned To | => msv |
2016-01-08 19:46 |
|
Relationship added | child of 0025076 |
2016-01-09 00:56 |
|
Note Added: 0049746 | |
2016-01-09 00:56 |
|
Assigned To | msv => isn |
2016-01-09 00:56 |
|
Status | new => assigned |
2016-01-11 19:04 | git | Note Added: 0049778 | |
2016-01-12 11:45 | git | Note Added: 0049780 | |
2016-01-12 16:36 |
|
Assigned To | isn => msv |
2016-01-12 16:36 |
|
Status | assigned => resolved |
2016-01-12 16:36 |
|
Steps to Reproduce Updated | |
2016-01-13 00:52 |
|
Note Added: 0049807 | |
2016-01-13 00:52 |
|
Assigned To | msv => isn |
2016-01-13 00:52 |
|
Status | resolved => assigned |
2016-01-13 12:01 | git | Note Added: 0049813 | |
2016-01-13 12:05 |
|
Assigned To | isn => msv |
2016-01-13 12:05 |
|
Status | assigned => resolved |
2016-01-13 12:05 |
|
Steps to Reproduce Updated | |
2016-01-13 12:12 |
|
Note Added: 0049816 | |
2016-01-13 12:12 |
|
Assigned To | msv => bugmaster |
2016-01-13 12:12 |
|
Status | resolved => reviewed |
2016-01-13 13:24 |
|
Assigned To | bugmaster => mkv |
2016-01-14 13:39 |
|
Note Added: 0049852 | |
2016-01-14 13:40 |
|
Note Added: 0049853 | |
2016-01-14 13:40 |
|
Assigned To | mkv => bugmaster |
2016-01-14 13:40 |
|
Status | reviewed => tested |
2016-01-14 13:40 |
|
Test case number | => Not needed |
2016-01-15 16:57 | bugmaster | Changeset attached | => occt master 99ac7b2e |
2016-01-15 16:57 | bugmaster | Status | tested => verified |
2016-01-15 16:57 | bugmaster | Resolution | open => fixed |
2016-01-22 12:28 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2016-04-17 14:14 | git | Note Added: 0053113 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |