0027066: BRepFeat_MakeCylindricalHole::Perform() hides overloaded virtual function

Moving to protected section